testdata/positive/fn_simple.rs
fn add(a: i32, b: i32) -> i32 {
    a + b
}

fn main() {
    let x: i32 = add(5, 3);
    println!("Result: {}", x);
}