testdata/negative/type_mismatch.rs
fn main() {
    let x: i32 = "hello";  // Несоответствие типов
}

